--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,4 @@
-upstream backend{
+upstream backend-server{
     server backend:8080;
 }
 server {
@@ -10,7 +10,7 @@ server {
         try_files $uri /index.html;
     }
     location /api{
-        proxy_pass http://backend;
+        proxy_pass http://backend-server;
 
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
