--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,6 @@
-upstream backend-server{
-    server backend:8080;
-}
+# upstream backend-server{
+#     server backend:8080;
+# }
 server {
     listen      80;
     server_name localhost;
@@ -9,12 +9,12 @@ server {
         index index.html index.htm;
         try_files $uri /index.html;
     }
-    location /api{
-        proxy_pass http://backend-server;
+    # location /api{
+    #     proxy_pass http://backend-server;
 
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_set_header X-NginX-Proxy true;
-    }
+    #     proxy_set_header X-Real-IP $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-NginX-Proxy true;
+    # }
 }
